Refactor Math operations to use Math.clamp for improved readability and consistency across various modules